<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="by.iba.sbs.library.viewmodel.LoginViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:gravity="center_vertical"
            android:paddingVertical="@dimen/spacing_small"
            android:text="@string/hint_login"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/outline_perm_identity_24"
                android:hint="@string/caption_work_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress|textNoSuggestions"
                android:text="@={viewmodel.login.ld}" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/spacing_normal"
            android:checked="@={viewmodel.keepLogin.ld}"
            android:text="@string/caption_remember_me"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            style="@style/Button.Action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="@{viewmodel.isLoginEnabled.ld}"
            android:onClick="@{() -> viewmodel.onNextButtonClick()}"
            android:paddingHorizontal="@dimen/spacing_xlarge"
            android:text="@string/btn_next"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>