<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="by.iba.sbs.library.viewmodel.RegisterViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/spacing_small"
        tools:context="by.iba.sbs.ui.login.RegisterFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:gravity="center_vertical"
            android:paddingVertical="@dimen/spacing_small"
            style="@style/Text.Title"
            android:text="@string/caption_register" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/outline_perm_identity_24"
                android:hint="@string/caption_work_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress|textNoSuggestions"
                android:text="@={viewmodel.login.ld}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/outline_lock_24"
                android:hint="@string/hint_new_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:text="@={viewmodel.password.ld}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/outline_lock_24"
                android:hint="@string/hint_confirm_new_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:text="@={viewmodel.passwordConfirm.ld}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/Button.Action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/spacing_xsmall"
            android:enabled="@{viewmodel.isRegisterEnabled.ld}"
            android:onClick="@{() -> viewmodel.onRegisterButtonClick()}"
            android:paddingHorizontal="@dimen/spacing_xlarge"
            android:text="@string/btn_register" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
