<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="by.iba.sbs.ui.login.ResetViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        childrenEnabled="@{!viewmodel.isLoading}"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatImageButton
                style="@style/Widget.AppCompat.ActionButton.Overflow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewmodel.onBackButtonPressed()}"
                android:src="@drawable/baseline_arrow_back_24" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:onClick="@{() -> viewmodel.onBackButtonPressed()}"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/outline_lock_24"
                android:hint="@string/hint_new_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:text="@={viewmodel.newPassword}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/outline_lock_24"
                android:hint="@string/hint_confirm_new_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:text="@={viewmodel.newPasswordConfirm}" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm"
            style="@style/Button.Action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/spacing_normal"
            android:enabled="@{viewmodel.isPasswordValid}"
            android:onClick="@{() -> viewmodel.onConfirmButtonPressed()}"
            android:paddingHorizontal="@dimen/spacing_xlarge"
            android:text="@string/btn_reset" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>